// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Password renders disabled 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 gBLEES"
      disabled={true}
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
      >
        medium
      </label>
      <div
        className="Inner-sc-1soq84i-0 PghWO"
      >
        <input
          className="Input-qkdgvx-0 icKVev"
          disabled={true}
          placeholder=" "
          type="password"
        />
        <div
          className="ShowPassword-sc-147a7th-0 evoMbN"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 kLWKCo"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 gBLEES"
      disabled={true}
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
      >
        large
      </label>
      <div
        className="Inner-sc-1soq84i-0 PghWO"
      >
        <input
          className="Input-qkdgvx-0 bRKGMs"
          disabled={true}
          placeholder=" "
          type="password"
        />
        <div
          className="ShowPassword-sc-147a7th-0 evoMbN"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 kLWKCo"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 gBLEES"
      disabled={true}
    >
      <div
        className="Inner-sc-1soq84i-0 XqqD"
      >
        <input
          className="Input-qkdgvx-0 dSyDAW"
          disabled={true}
          placeholder=" "
          type="password"
        />
        <label
          className="LabelInner-vrrjt0-0 foFqgl"
        >
          xlarge
        </label>
        <div
          className="ShowPassword-sc-147a7th-0 evoMbN"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 kLWKCo"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders error 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
      >
        medium
      </label>
      <div
        className="Inner-sc-1soq84i-0 PghWO"
      >
        <input
          className="Input-qkdgvx-0 bRFlld"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="ShowPassword-sc-147a7th-0 evoMbN"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 jpqMLI"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
      >
        large
      </label>
      <div
        className="Inner-sc-1soq84i-0 PghWO"
      >
        <input
          className="Input-qkdgvx-0 Xnlsy"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="ShowPassword-sc-147a7th-0 evoMbN"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 jpqMLI"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <div
        className="Inner-sc-1soq84i-0 XqqD"
      >
        <input
          className="Input-qkdgvx-0 hjLidw"
          placeholder="Placeholder"
          type="password"
        />
        <label
          className="LabelInner-vrrjt0-0 foFqgl"
        >
          xlarge
        </label>
        <div
          className="ShowPassword-sc-147a7th-0 evoMbN"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 jpqMLI"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders readOnly 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
      >
        medium
      </label>
      <div
        className="Inner-sc-1soq84i-0 PghWO"
      >
        <input
          className="Input-qkdgvx-0 icKVev"
          placeholder=" "
          readOnly={true}
          type="password"
        />
        <div
          className="ShowPassword-sc-147a7th-0 evoMbN"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 kLWKCo"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
      >
        large
      </label>
      <div
        className="Inner-sc-1soq84i-0 PghWO"
      >
        <input
          className="Input-qkdgvx-0 bRKGMs"
          placeholder=" "
          readOnly={true}
          type="password"
        />
        <div
          className="ShowPassword-sc-147a7th-0 evoMbN"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 kLWKCo"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <div
        className="Inner-sc-1soq84i-0 XqqD"
      >
        <input
          className="Input-qkdgvx-0 dSyDAW"
          placeholder=" "
          readOnly={true}
          type="password"
        />
        <label
          className="LabelInner-vrrjt0-0 foFqgl"
        >
          xlarge
        </label>
        <div
          className="ShowPassword-sc-147a7th-0 evoMbN"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 kLWKCo"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders with hint 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
      >
        medium
      </label>
      <div
        className="Inner-sc-1soq84i-0 PghWO"
      >
        <input
          className="Input-qkdgvx-0 icKVev"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="ShowPassword-sc-147a7th-0 evoMbN"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 kLWKCo"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
      >
        large
      </label>
      <div
        className="Inner-sc-1soq84i-0 PghWO"
      >
        <input
          className="Input-qkdgvx-0 bRKGMs"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="ShowPassword-sc-147a7th-0 evoMbN"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 kLWKCo"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <div
        className="Inner-sc-1soq84i-0 XqqD"
      >
        <input
          className="Input-qkdgvx-0 dSyDAW"
          placeholder="Placeholder"
          type="password"
        />
        <label
          className="LabelInner-vrrjt0-0 foFqgl"
        >
          xlarge
        </label>
        <div
          className="ShowPassword-sc-147a7th-0 evoMbN"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 kLWKCo"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders with label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
      >
        medium
      </label>
      <div
        className="Inner-sc-1soq84i-0 PghWO"
      >
        <input
          className="Input-qkdgvx-0 icKVev"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="ShowPassword-sc-147a7th-0 evoMbN"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
      >
        large
      </label>
      <div
        className="Inner-sc-1soq84i-0 PghWO"
      >
        <input
          className="Input-qkdgvx-0 bRKGMs"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="ShowPassword-sc-147a7th-0 evoMbN"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <div
        className="Inner-sc-1soq84i-0 XqqD"
      >
        <input
          className="Input-qkdgvx-0 dSyDAW"
          placeholder="Placeholder"
          type="password"
        />
        <label
          className="LabelInner-vrrjt0-0 foFqgl"
        >
          xlarge
        </label>
        <div
          className="ShowPassword-sc-147a7th-0 evoMbN"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders without label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <div
        className="Inner-sc-1soq84i-0 PghWO"
      >
        <input
          className="Input-qkdgvx-0 icKVev"
          placeholder="medium"
          type="password"
        />
        <div
          className="ShowPassword-sc-147a7th-0 evoMbN"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <div
        className="Inner-sc-1soq84i-0 PghWO"
      >
        <input
          className="Input-qkdgvx-0 bRKGMs"
          placeholder="large"
          type="password"
        />
        <div
          className="ShowPassword-sc-147a7th-0 evoMbN"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <div
        className="Inner-sc-1soq84i-0 XqqD"
      >
        <input
          className="Input-qkdgvx-0 kEkrKX"
          placeholder="xlarge"
          type="password"
        />
        <label
          className="LabelInner-vrrjt0-0 foFqgl"
        />
        <div
          className="ShowPassword-sc-147a7th-0 evoMbN"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password supports background colour 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
      >
        medium
      </label>
      <div
        className="Inner-sc-1soq84i-0 PghWO"
      >
        <input
          className="Input-qkdgvx-0 kDnKdQ"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="ShowPassword-sc-147a7th-0 evoMbN"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 kLWKCo"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
      >
        large
      </label>
      <div
        className="Inner-sc-1soq84i-0 PghWO"
      >
        <input
          className="Input-qkdgvx-0 kGDBlT"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="ShowPassword-sc-147a7th-0 evoMbN"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 kLWKCo"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <div
        className="Inner-sc-1soq84i-0 kEpyYM"
      >
        <input
          className="Input-qkdgvx-0 dSyDAW"
          placeholder="Placeholder"
          type="password"
        />
        <label
          className="LabelInner-vrrjt0-0 foFqgl"
        >
          xlarge
        </label>
        <div
          className="ShowPassword-sc-147a7th-0 evoMbN"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 kLWKCo"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;
